--- a/test.html
+++ b/test.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-</head <body>
-<h1>Hello World</h1>
+</head>
+
+<body>
+    <h1>Hello World</h1>
 </body>
 
 </html>
