added header to friends page & edit header page

--- a/html/friends.html
+++ b/html/friends.html
@@ -6,11 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Friends</title>
+    <link rel="stylesheet" href="../css/layouts/header.css">
     <link rel="stylesheet" href="../css/friends.css">
     <link rel="stylesheet" href="../css/normalize.css">
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <a href="#" class="logo">
+                <img src="../images/layouts/header/logo.JPG" alt="logo">
+            </a>
+            <nav>
+                <ul>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/home.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/story.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/reels.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/friends.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/market.JPG">
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="sec-section">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/notification.JPG">
+                        </a>
+                    </li>
+                    <li class="sec-section-two">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/message.JPG">
+                        </a>
+                    </li>
+                    <li class="sec-section-two">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/settings.JPG">
+                        </a>
+                    </li>
+                    <li class="sec-section-last">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/profile.JPG">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <section id="body">
         <div class="container nav-body">
             <h1>Friends</h1>
