added header to profile page

--- a/html/profile.html
+++ b/html/profile.html
@@ -6,19 +6,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/layouts/header.css">
     <link rel="stylesheet" href="../css/profile.css">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"></head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Montserrat:wght@400;700&display=swap"
+        rel="stylesheet">
+</head>
 
 <body>
-    <div class="container">
-        <div class="topNav" id="topNav">
-            <div class="topNavData"></div>
+
+    <header>
+        <div class="container">
+            <a href="#" class="logo">
+                <img src="../images/layouts/header/logo.JPG" alt="logo">
+            </a>
+            <nav>
+                <ul>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/home.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/story.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/reels.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/friends.JPG">
+                        </a>
+                    </li>
+                    <li class="section-one">
+                        <a href="#">
+                            <img src="../images/layouts/header/buttons/market.JPG">
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="sec-section">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/notification.JPG">
+                        </a>
+                    </li>
+                    <li class="sec-section-two">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/message.JPG">
+                        </a>
+                    </li>
+                    <li class="sec-section-two">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/settings.JPG">
+                        </a>
+                    </li>
+                    <li class="sec-section-last">
+                        <a href="#" class="buttons">
+                            <img src="../images/layouts/header/buttons/profile.JPG">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
+    </header>
+    <div class="container">
         <div class="sideNav">
             <div class="sideNavData"></div>
         </div>
@@ -94,7 +154,7 @@
                                     <span>Feeling/Activity</span>
                                 </a>
                             </div>
-                            
+
                         </div>
                         <div class="rightBtns">
                             <a href="">
@@ -205,7 +265,7 @@
                                     <a href=""><span style="color: blue;"><b>See more.</b></span></a>
                                 </p>
                             </div>
-                            
+
                         </div>
                         <div class="react" style="margin: .25rem 0;">
                             <div class="reactLeft">
@@ -342,7 +402,7 @@
                                     <img src="../images/e-4.jpg" alt="">
                                 </a>
                                 <div class="extra">
-                                    <a href="" >
+                                    <a href="">
                                         <img src="../images/e-5.jpg" alt="" sty>
                                     </a>
                                     <a href="">
