--- a/html/friends.html
+++ b/html/friends.html
@@ -14,13 +14,13 @@
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="../images/layouts/header/logo.JPG" alt="logo">
             </a>
             <nav>
                 <ul>
                     <li class="section-one">
-                        <a href="#">
+                        <a href="../index.html">
                             <img src="../images/layouts/header/buttons/home.JPG">
                         </a>
                     </li>
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="section-one">
-                        <a href="#">
+                        <a href="./friends.html">
                             <img src="../images/layouts/header/buttons/friends.JPG">
                         </a>
                     </li>
@@ -62,7 +62,7 @@
                         </a>
                     </li>
                     <li class="sec-section-last">
-                        <a href="#" class="buttons">
+                        <a href="./profile.html" class="buttons">
                             <img src="../images/layouts/header/buttons/profile.JPG">
                         </a>
                     </li>
@@ -110,7 +110,7 @@
                 <a href="#" class="friend">friend</a>
             </div>
             <div class="user-card">
-                <img src="../images/friends/user-02.png" alt="" />
+                <img src="../images/friends/user-05.png" alt="" />
                 <h1>Surfiya Zakir</h1>
                 <p>@macale343</p>
                 <a href="#" class="not-friend">add friend</a>
@@ -122,7 +122,7 @@
                 <a href="#" class="friend">friend</a>
             </div>
             <div class="user-card">
-                <img src="../images/friends/user-04.png" alt="" />
+                <img src="../images/friends/user-05.png" alt="" />
                 <h1>Hurin Seary</h1>
                 <p>@macale343</p>
                 <a href="#" class="not-friend">add friend</a>
