fixed header links

--- a/html/friends.html
+++ b/html/friends.html
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="section-one">
-                        <a href="./friends.html">
+                        <a href="#">
                             <img src="../images/layouts/header/buttons/friends.JPG">
                         </a>
                     </li>
